--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "version": 2,
-    "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "index.js" }]
+    "functions": {
+      "./index.js": {
+        "runtime": "nodejs18.x"
+      }
+    }
   }
   
