--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,17 @@
     "version": 2,
     "builds": [
       {
-        "src": "./src/index.js",
+        "src": "src/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "./src/(.*)",
-        "dest": "./src/index.js"
+        "src": "/(.*)",
+        "dest": "src/index.js"
       }
     ]
   }
+  
   
   
